# rust_chess_engine

./: Cargo.toml  README.md
benches/: bench_movegen.rs  bench_perft.rs  movegen.rs
src/: lib.rs  main.rs  terminal.rs
src/core/: bitboard.rs  board.rs  fen.rs  masks.rs  mod.rs  square.rs  utils.rs
src/core/movegen/: board.rs  constants.rs  magic.rs  mod.rs  move.rs  movescan.rs  non_sliding.rs  slider.rs  sliding.rs
src/perft/: mod.rs
tests/: test_bitboard.rs  test_fen.rs  test_movegen.rs  test_perft.rs  test_square.rs
