[package]
name = "rust_chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
fastrand = "1.8.0"
arr_macro = "0.1.3"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "movegen"
harness = false
