[package]
name = "rust_chess_engine"
authors = ["Kai Wang"]
repository = "https://github.com/kaiwinut/rust_chess_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
fastrand = "1.8.0"
arr_macro = "0.1.3"
bitflags = "1.3.2"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["html_reports"] }

[[bench]]
name = "bench_movegen"
harness = false

[[bench]]
name = "bench_perft"
harness = false